--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       font-family: 'Hiragino Mincho ProN', '游明朝', 'MS Mincho', serif;
       margin: 0;
       padding: 0;
-      background: #f5f8fa url('はかゆり空画像.jpg') no-repeat center center fixed;
+      background: #f5f8fa url('はかゆり空画像 - コピー.jpg') no-repeat center center fixed;
       background-size: cover;
       color: #14171a;
     }
