--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       color: #14171a;
     }
     header {
-      background: #6575a5;
+      background: #4970e4;
       color: white;
       padding: 10px;
       text-align: center;
@@ -50,7 +50,7 @@
       padding: 4px 6px;
     }
     .input-box {
-      background: rgba(129, 150, 220, 0.7);
+      background: rgba(104, 133, 230, 0.7);
       border-radius: 8px;
       padding: 10px;
       box-shadow: 0 0 5px rgba(0,0,0,0.1);
@@ -93,7 +93,7 @@
       gap: 10px;
     }
     .post {
-      background: rgba(255, 255, 255, 0.7);
+      background: rgba(83, 105, 207, 0.7);
       border-radius: 8px;
       padding: 10px;
       box-shadow: 0 0 5px rgba(0,0,0,0.1);
@@ -110,6 +110,7 @@
       border-radius: 50%;
     }
     .search-box input {
+      color: rgb(135, 138, 199);
       width: 100%;
       padding: 8px;
       font-size: 0.9em;
@@ -140,8 +141,8 @@
   <header>青の瞬間</header>
   <div class="container">
     <div class="profile">
-      <img id="profileIcon" src="" alt="icon">
-      <input type="text" id="profileName" placeholder="name">
+      <img id="profileIcon" src="" alt="アイコン">
+      <input type="text" id="profileName" placeholder="アカウントネーム">
       <input type="file" id="iconInput" accept="image/*">
     </div>
     <div class="input-box">
@@ -152,7 +153,7 @@
     </div>
     <div class="chatgpt-link">
       <a href="https://chat.openai.com" target="_blank">My Darling</a>
-      <span class="delete-all-link" onclick="deleteAllPosts()">全削除</span>
+      <span class="delete-all-link" onclick="deleteAllPosts()">全てのツイートを削除</span>
     </div>
     <div class="search-box">
       <input type="text" id="searchBox" placeholder="検索..." oninput="renderTimeline()">
@@ -231,7 +232,7 @@
     }
 
     function deleteAllPosts() {
-      if (confirm("Back To Real？")) {
+      if (confirm("本当にすべて削除しますか？")) {
         localStorage.removeItem("posts");
         renderTimeline();
       }
@@ -255,7 +256,7 @@
         div.innerHTML = `
           <div class="meta">
             <img src="${post.icon}" alt="icon" />
-            <strong>${post.name || "i"}</strong>
+            <strong>${post.name || "名無し"}</strong>
             <small>${post.time}</small>
           </div>
           <div class="text">${post.text}</div>
