--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -50,7 +51,7 @@
       padding: 4px 6px;
     }
     .input-box {
-      background: rgba(104, 133, 230, 0.7);
+      background: rgba(104, 133, 230, 0.5);
       border-radius: 8px;
       padding: 10px;
       box-shadow: 0 0 5px rgba(0,0,0,0.1);
@@ -93,7 +94,7 @@
       gap: 10px;
     }
     .post {
-      background: rgba(83, 105, 207, 0.7);
+      background: rgba(83, 105, 207, 0.5);
       border-radius: 8px;
       padding: 10px;
       box-shadow: 0 0 5px rgba(0,0,0,0.1);
@@ -110,6 +111,7 @@
       border-radius: 50%;
     }
     .search-box input {
+      background: rgba(104, 133, 230, 0.5);
       color: rgb(135, 138, 199);
       width: 100%;
       padding: 8px;
@@ -205,7 +207,7 @@
     };
 
     function extractTags(text) {
-      return text.match(/#\\w+/g) || [];
+      return text.match(/#\w+/g) || [];
     }
 
     function postTweet() {
