--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         div.innerHTML = `
           <div class="meta">
             <img src="${post.icon}" alt="icon" />
-            <strong>${post.name || "名無し"}</strong>
+            <strong>${post.name || "i"}</strong>
             <small>${post.time}</small>
           </div>
           <div class="text">${post.text}</div>
