--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   <div class="container">
     <div class="profile">
       <img id="profileIcon" src="" alt="アイコン">
-      <input type="text" id="profileName" placeholder="アカウントネーム">
+      <input type="text" id="profileName" placeholder="i">
       <input type="file" id="iconInput" accept="image/*">
     </div>
     <div class="input-box">
