--- a/index.html
+++ b/index.html
@@ -46,14 +46,6 @@
       border-radius: 50%;
       object-fit: cover;
     }
-    .profile input[type="text"] {
-      font-size: 0.85em;
-      padding: 4px 6px;
-      flex: 1;
-      max-width: 100%;
-      box-sizing: border-box;
-    }
-    }
     .input-box {
       background: rgba(104, 133, 230, 0.5);
       border-radius: 8px;
@@ -62,6 +54,7 @@
       display: flex;
       flex-direction: column;
       gap: 10px;
+      align-items: flex-end;
     }
     textarea {
       width: calc(100% - 10px);
@@ -151,7 +144,6 @@
   <div class="container">
     <div class="profile">
       <img id="profileIcon" src="" alt="?">
-      <input type="text" id="profileName" placeholder="i">
       <input type="file" id="iconInput" accept="image/*">
     </div>
     <div class="input-box">
@@ -174,7 +166,6 @@
     const tweetButton = document.getElementById("tweetButton");
     const imageInput = document.getElementById("imageInput");
     const imagePreview = document.getElementById("imagePreview");
-    const profileName = document.getElementById("profileName");
     const profileIcon = document.getElementById("profileIcon");
     const iconInput = document.getElementById("iconInput");
     const searchBox = document.getElementById("searchBox");
@@ -182,12 +173,7 @@
 
     let imageFiles = [];
 
-    profileName.value = localStorage.getItem("profileName") || "";
     profileIcon.src = localStorage.getItem("profileIcon") || "";
-
-    profileName.oninput = () => {
-      localStorage.setItem("profileName", profileName.value);
-    };
 
     iconInput.onchange = e => {
       const file = e.target.files[0];
@@ -225,7 +211,6 @@
       posts.unshift({
         text: text,
         tags: extractTags(text),
-        name: profileName.value,
         icon: profileIcon.src,
         time: new Date().toLocaleString()
       });
@@ -265,7 +250,7 @@
         div.innerHTML = `
           <div class="meta">
             <img src="${post.icon}" alt="icon" />
-            <strong>${post.name || "i"}</strong>
+            <strong>i</strong>
             <small>${post.time}</small>
           </div>
           <div class="text">${post.text}</div>
