--- a/index.html
+++ b/index.html
@@ -2,44 +2,84 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>シークログ風メモ</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-<header>
-  <h1>シークログ</h1>
-  <div class="controls">
-    <input id="search" placeholder="検索">
-    <button id="newBtn">新規</button>
-  </div>
-</header>
-
-<main>
-  <aside id="sidebar">
-    <h3>タグ</h3>
-    <ul id="tagList"></ul>
-  </aside>
-
-  <section id="noteArea">
-    <div id="noteList"></div>
-
-    <div id="editor" class="hidden">
-      <input id="noteTitle" placeholder="タイトル">
-      <textarea id="noteContent" placeholder="本文"></textarea>
-      <input id="noteTags" placeholder="タグ（カンマ区切り）">
-      <label><input type="checkbox" id="notePinned"> ピン留め</label>
-
-      <div class="editor-actions">
-        <button id="saveBtn">保存</button>
-        <button id="cancelBtn">キャンセル</button>
-        <button id="deleteBtn" class="danger">削除</button>
+  <header id="appHeader">
+    <div class="header-left">
+      <div id="profileArea" class="profile-area">
+        <img id="profileIcon" alt="icon" />
+        <div id="profileName"></div>
+      </div>
+      <div class="title-area">
+        <h1>シークログ</h1>
+        <div class="sub">軽量メモ · オフライン · タグタブ</div>
       </div>
     </div>
-  </section>
-</main>
 
-<script src="app.js"></script>
+    <div class="header-right">
+      <input id="search" placeholder="検索" />
+      <button id="newBtn">新規</button>
+      <button id="openProfileBtn" title="プロフィール設定">設定</button>
+    </div>
+  </header>
+
+  <nav id="tagTabs" class="tag-tabs"></nav>
+
+  <main>
+    <section id="noteArea">
+      <div id="noteList" class="note-list"></div>
+
+      <div id="editor" class="editor hidden" role="dialog" aria-hidden="true">
+        <div class="editor-top">
+          <input id="noteTitle" placeholder="タイトル" />
+          <label class="pin"><input type="checkbox" id="notePinned" /> ピン</label>
+        </div>
+        <textarea id="noteContent" placeholder="本文"></textarea>
+        <input id="noteTags" placeholder="タグ（カンマ区切り）" />
+        <div class="editor-actions">
+          <button id="saveBtn">保存</button>
+          <button id="cancelBtn">キャンセル</button>
+          <button id="deleteBtn" class="danger">削除</button>
+        </div>
+      </div>
+    </section>
+
+    <aside id="side">
+      <div class="panel">
+        <h3>テーマ</h3>
+        <input type="file" id="themeInput" accept="image/*" />
+        <button id="clearTheme">テーマクリア</button>
+      </div>
+
+      <div class="panel">
+        <h3>タグ一覧</h3>
+        <div id="tagList" class="tag-list"></div>
+      </div>
+
+      <div class="panel">
+        <h3>エクスポート / インポート</h3>
+        <button id="exportBtn">JSON エクスポート</button>
+        <input type="file" id="importInput" accept="application/json" />
+      </div>
+    </aside>
+  </main>
+
+  <!-- プロフィールモーダル -->
+  <div id="profileModal" class="modal hidden" role="dialog" aria-hidden="true">
+    <div class="modal-content">
+      <h2>プロフィール設定</h2>
+      <label>名前<input id="profileNameInput" placeholder="表示名" /></label>
+      <label>アイコン（画像）<input type="file" id="profileIconInput" accept="image/*" /></label>
+      <div class="modal-actions">
+        <button id="saveProfile">保存</button>
+        <button id="closeProfile">閉じる</button>
+      </div>
+    </div>
+  </div>
+
+  <script src="app.js" defer></script>
 </body>
 </html>
